--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@ div.3dback {
   top: 0;
   right: 0;
 }
+div.threeddiv{
+  z-index: -100;
+  position: fixed;
+  top: window.innerHeight/2;
+  left: window.innerwidth/2;
+}
 div.fixed 
 {
   position: fixed;
