--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ div.3dback {
   top: 0;
   right: 0;
 }
-div.threeddiv{
+.threeddiv{
   z-index: -100;
   position: fixed;
   top: window.innerHeight/2;
