--- a/style.css
+++ b/style.css
@@ -1,32 +1,32 @@
-html, body {
-  overflow: hidden;
-  width: 100%;
-  height: 50%;
-  margin: 0;
-  padding: 0;
-  background-color: pink;
-}
+html,
+  body {
+    overflow: auto;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: pink;
+  }
+  
+  h1{
+    z-index: 1;
+    color: darkred;
+    text-align: center;
+  }
+  
+  h2{
+    z-index: 1;
+    text-align: center;
+  }
 
-#renderCanvas {
-  width: 100%;
-  height: 100%;
-  touch-action: none;
-}
-
-#divCanvas {
-  width: 100%;
-  height: 85%;
-  position:fixed;
-  top: 10%;
-  left:0;
-}
-
-h1{
-  z-index: 1;
-  color: darkred;
-}
-
-h2{
-  z-index: 1;
-}
-
+  #renderCanvas {
+    width: 100%;
+    height: 100%;
+    touch-action: none;
+  }
+  
+  #divCanvas {
+    width: 100%;
+    text-align: center;
+    left:0;
+  }
