--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ html,
     text-align: center;
   }
 
+  p {
+    text-indent: 25px;
+  }
+
   #renderCanvas {
     width: 100%;
     height: 100%;
