--- a/style.css
+++ b/style.css
@@ -30,3 +30,24 @@ html,
     text-align: center;
     left:0;
   }
+
+  /* Style the button that is used to open and close the collapsible content */
+  .collapsible {
+      color: #222;
+      cursor: pointer;
+      width: 0px;
+      border: none;
+      outline: none;
+      font-size: 15px;
+  }
+
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+      color: #777;
+  }
+
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+      display: none;
+      overflow: hidden;
+  }
