--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html,
   }
 
   /* Style the button that is used to open and close the collapsible content */
-  .collapsible {
+  .collapsible, .collapsibleUP {
       color: #222;
       cursor: pointer;
       width: 0px;
@@ -42,7 +42,7 @@ html,
   }
 
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .collapsible:hover {
+  .active, .collapsible:hover, .collapsibleUP:hover {
       color: #777;
   }
 
